added new api
