# pkg/entities/movie.go
@@ -1,10 +1,9 @@
 package entities
 
 type Movie struct {
-	Id          int         `json:"id,omitempty" example:"1"`
-	Title       string      `json:"title,omitempty" example:"Avengers:Endgame"`
-	ReleaseYear int         `json:"release_year,omitempty" example:"2019"`
-	Rating      float32     `json:"rating,omitempty" example:"8.4"`
-	Genere      []string    `json:"genere,omitempty" example:"[\"Action\",\"Adventure\",\"Drama\"]"`
-	MetaData    interface{} `json:"metadata,omitempty"`
+	Id    string   `json:"ImdbID,omitempty" example:"tt2884018"`
+	Title string   `json:"Title,omitempty" example:"Avengers:Endgame"`
+	Year  int      `json:"Year,omitempty" example:"2019"`
+	Rated float32  `json:"Rated,omitempty" example:"8.4"`
+	Genre []string `json:"Genre,omitempty" example:"Action, Adventure, Drama"`
 }
